--- a/lab01/carducci-bio.html
+++ b/lab01/carducci-bio.html
@@ -1,10 +1,10 @@
-<DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8"
-<title>"Brendan-Bio"<title>
-<head>
-<body>
-"My name is Brendan Carducci. I am currently a Policy Studies major in the Maxwell School. I was drawn to this major because of my interest in politics. Unlike the Political Science, which is more focused in political theory, policy is all about real-world solutions to societal problems. This is what I find most interesting about the major. Beyond my interest in politics, I am also a very big sports fan. Since I was young, I have closely followed the Chicago Bears football team. Furthermore, I am an avid college basketball fan. Since I was 15 years old, I have been a published writer for the St. John’s University basketball team. This has allowed me to experience some awesome things such as covering the Big East Tournament as credentialed media, establishing relationships with respected sports journalists, and even conducting a sit-down interview with the Patrick Ewing! When I am not following politics or watching sports, I am watching some of my favorite programs. My favorite television shows include The Sopranos, The Wire, and It’s Always Sunny in Philadelphia. Just like anyone, I have future aspirations. I hope to graduate college with a fruitful career lined up, and I hope to move to Chicago at some point. The ultimate goal is to have enough money to afford Bears season tickets." 
-<body>
-<html>
+<!DOCTYPE html>
+    <html>
+        <head>
+            <meta charset="utf-8"
+            <title>"Brendan-Bio"</title>
+        </head>
+        <body>
+        "My name is Brendan Carducci. I am currently a Policy Studies major in the Maxwell School. I was drawn to this major because of my interest in politics. Unlike the Political Science, which is more focused in political theory, policy is all about real-world solutions to societal problems. This is what I find most interesting about the major. Beyond my interest in politics, I am also a very big sports fan. Since I was young, I have closely followed the Chicago Bears football team. Furthermore, I am an avid college basketball fan. Since I was 15 years old, I have been a published writer for the St. John’s University basketball team. This has allowed me to experience some awesome things such as covering the Big East Tournament as credentialed media, establishing relationships with respected sports journalists, and even conducting a sit-down interview with the Patrick Ewing! When I am not following politics or watching sports, I am watching some of my favorite programs. My favorite television shows include The Sopranos, The Wire, and It’s Always Sunny in Philadelphia. Just like anyone, I have future aspirations. I hope to graduate college with a fruitful career lined up, and I hope to move to Chicago at some point. The ultimate goal is to have enough money to afford Bears season tickets." 
+        </body>
+    </html>
