carducci-bio.html

--- a/lab05/carducci-bio.html
+++ b/lab05/carducci-bio.html
@@ -10,6 +10,8 @@
             <p>
                 My name is Brendan Carducci. I am currently a Policy Studies major in the Maxwell School.
             </p>
+
+            <img src="../Images/lab05pcc.png" alt="Photoshop">
         <p>
             I was drawn to this major because of my interest in politics. Unlike the Political Science, which is more focused in political theory, policy is all about real-world solutions to societal problems. This is what I find most interesting about the major.
         </p>
