--- a/lab06/carducci-bio.html
+++ b/lab06/carducci-bio.html
@@ -3,6 +3,7 @@
         <head>
             <meta charset="utf-8">
             <title>Bdawg-Bio</title>
+            <link rel="stylesheet" href="/pathstyles.css">
         </head>
         
         <body>
