--- a/lab06/carducci-bio.html
+++ b/lab06/carducci-bio.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <title>Bdawg-Bio</title>
-            <link rel="styles" href="/ist263/lab06/styles.css">
+            <link rel="stylesheet" href="styles.css">
         </head>
         
         <body>
